crates/escalier_parser/src/snapshots/escalier_parser__tests__template_literals.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"`Hello, world`\")"
---
Ok(
    Program {
        body: [
            ExprStmt(
                Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 14,
                        },
                    },
                    span: 0..14,
                    kind: TemplateLiteral(
                        TemplateLiteral {
                            exprs: [],
                            quasis: [
                                TemplateElem {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 14,
                                        },
                                    },
                                    span: 1..13,
                                    raw: Str(
                                        Str {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 14,
                                                },
                                            },
                                            span: 1..13,
                                            value: "Hello, world",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 14,
                                                },
                                            },
                                            span: 1..13,
                                            value: "Hello, world",
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                    inferred_type: None,
                },
            ),
        ],
    },
)
